--- a/styles/globals.css
+++ b/styles/globals.css
@@ -221,7 +221,7 @@ input {
 }
 
 .footer .nav-item a {
-  color: #fff;
+  color: #000;
   font-weight: 600;
   font-size: 18px;
   line-height: 28px;
