--- a/styles/globals.css
+++ b/styles/globals.css
@@ -375,6 +375,26 @@ li > p {
   width: fit-content;
 }
 
+.state-to-watch-image.score-3 svg path {
+  fill: #FFB600;
+}
+
+.state-to-watch-image.score-2 svg path {
+  fill: #47CCCC;
+}
+
+.state-to-watch-image.score-1 svg path {
+  fill: #AAE5E1;
+}
+
+.state-to-watch-image.score-0 svg path {
+  fill: #FF9797;
+}
+
+.state-to-watch-image.score--1 {
+  fill: #F06449;
+}
+
 .score-label.overall-3 {
     background-color: #FFB600;
 }
